# UsefulDevice

./: .gitignore  ACargo.toml  Cargo.toml  README.md  WCargo.toml  build.rs  mcrandroid.jks  ｗCargo.toml
android_app/app/: build.gradle
android_app/app/libs/: app-release.aar
android_lib/: settings.gradle.kts
android_lib/app/: build.gradle.kts
android_lib/app/src/androidTest/java/com/rustlibs/: ExampleInstrumentedTest.kt
android_lib/app/src/main/: AndroidManifest.xml
android_lib/app/src/main/java/com/rustlibs/: Authentication.kt
android_lib/app/src/main/java/com/rustlibs/Authentication/: Authentication.kt
android_lib/app/src/main/res/values/: strings.xml  themes.xml
android_lib/app/src/main/res/values-night/: themes.xml
android_lib/app/src/test/java/com/rustlibs/: ExampleUnitTest.kt
android_lib/gradle/: libs.versions.toml
android_lib/gradle/wrapper/: gradle-wrapper.properties
doc/: README.md
lib/all/auth/: cargo.toml
lib/all/auth/src/: auth.rs  lib.rs
lib/auth/: build.rs  cargo.toml
lib/auth/src/: lib.rs  main.rs
lib/auth/src/android/: mod.rs
lib/auth/src/mac/: mod.rs
lib/auth/src/windows/: mod.rs
lib/ctrl/src/: commands.rs
lib/link/: Cargo.toml
lib/link/src/: mdns.rs  tcp.rs
lib/vault/: Cargo.toml
lib/vault/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
src/: 0lib.rs  Alib.rs  Wmain.rs  aaaamain.rs  lib.rs  main.rs  mcrandroid.jks  slint_fanc.rs
src/client/: Cargo.toml
src/client/src/: catch_status.rs  discover_connect.rs  lib.rs  main.rs  send_cmd.rs  send_cmdID.rs  shortcut_cmd.rs
src/client/src/smart_key_module/: key_cmd.rs  udp.rs
src/ctrl/: Cargo.toml  client_session.rs  connection_manager.rs  keyboard.rs  lib.rs  server_setup.rs  status.rs
src/fileserver/: Cargo.toml  foo.txt  main.rs
src/link/: Cargo.toml  connection.rs  discovery.rs  lib.rs  server_init.rs  service_registration.rs
src/link/src/: lib.rs  mdns.rs
src/server/: Cargo.toml
src/server/src/: client_handler.rs  device_ctrl.rs  lib.rs  main.rs  send_status.rs  server.rs  shortcut_cmd.rs
ui/: File.slint  app-window.slint  device_search.slint  icons.slint
