[package]
name = "useful_device"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "useful_device"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ud_link = {path = "lib/all/link" }
ud_ctrl = {path = "lib/all/ctrl" }
#ud_server = {path = "src/server" }
tokio = { version = "1.46.0", features = ["full"] }

[lib]
crate-type = ["cdylib", "staticlib"]

[target.'cfg(target_os = "android")'.dependencies]
slint = { version = "1.13.0", features = ["backend-android-activity-06"] }
android-activity = "0.6.0"




[target.'cfg(not(target_os = "android"))'.dependencies]
slint =  "1.13.0"


[build-dependencies]
slint-build = "1.13.0"

[patch.crates-io]
slint = { git = "https://github.com/slint-ui/slint" }
slint-build = { git = "https://github.com/slint-ui/slint" }




#android settings
[package.metadata.android.signing.release]
path = "mcrandroid.jks"  # Keystore のパス（Cargo.toml のあるディレクトリ基準）
keystore_password = "789632145"  # Keystore のパスワード
key_alias = "my-key-alias"  # Keystore の alias
key_password = "789632145"  # キーのパスワード

[package.metadata.android]

[[package.metadata.android.uses_permission]]
name="android.permission.INTERNET"
[[package.metadata.android.uses_permission]]
name="android.permission.ACCESS_NETWORK_STATE"
[[package.metadata.android.uses_permission]]
name="android.permission.CHANGE_WIFI_MULTICAST_STATE"