[package]
name = "https_file_upload"
version = "0.1.0"
edition = "2021"


[lib]
name = "ud_vault"
path = "src/lib.rs"
[[bin]]
name = "ud_vault"
path = "src/main.rs"
[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
