[package]
name = "ud_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "ud_server"
path = "src/lib.rs"

[dependencies]

mdns-sd ="0.13.4"
hostname = "0.4.0"
local-ip-address = "0.6.3"
winapi = {version = "0.3.9",features = ["winbase", "combaseapi", "mmdeviceapi", "endpointvolume","winuser"]}
windows-volume-control = "0.1.1"
widestring = "1.2.0"
windows = { version = "0.61.1", features = ["Win32_Media_Audio", "Win32_System_Com", "Win32_UI_Shell_PropertiesSystem","Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
tokio = { version = "1.31", features = ["full"] }






